@@ -1,6 +1,6 @@
 Name: netcdf
-Version: 1.0.6
-Date: 2015-02-22
+Version: 1.0.7
+Date: 2015-06-10
 Author: Alexander Barth <barth.alexander@gmail.com>
 Maintainer: Alexander Barth <barth.alexander@gmail.com>
 Title: netcdf
